add missing deployment dependencies

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-asgiref==3.8.1
 Django==5.2
 djangorestframework==3.16.0
+asgiref==3.8.1
 pillow==11.3.0
 pytz==2025.2
 sqlparse==0.5.3
@@ -8,5 +8,7 @@ tzdata==2025.2
 requests==2.32.3
 python-dateutil==2.9.0.post0
 
-
-
+gunicorn
+whitenoise
+dj-database-url
+psycopg2-binary
